background images and splash screen added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="playlist_created_title">Playlist created: </string>
     <string name="playlist_created_text1">The playlist: </string>
     <string name="playlist_created_text2"> was successfully created.</string>
+    <string name="no_connection_toast">No network access.</string>
 </resources>
